reactjs-demo-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-daas-digidhamu-com
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # - secretName: daas-digidhamu-com-tls
  #   hosts:
  #   - daas.digidhamu.com

  rules:
  - host: daas.digidhamu.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: reactjs-demo
            port:
              number: 8008
